--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "sass": "^1.37.5",
     "slick-carousel": "^1.8.1",
     "swiper": "6.8.4",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yarn": "^1.22.15"
   },
   "scripts": {
     "start": "react-scripts start",
